# cnn-soc

./: .gitignore
HLS/: .gitignore  CMakeLists.txt  Makefile
HLS/include/: conv2d.h  imgRead.h  maxPool.h  perceptron.h  reshape.h  sizes.h  types.h
HLS/src/: imgRead.c  maxPool.cpp  perceptron.cpp  reshape.cpp
HLS/tests/: main.cpp  test_maxPool.cpp  test_perceptron.cpp  test_reshape.cpp
data/: test_coeff.txt  toto.raw
data/fichiers_catapult_c10_4b/pkgs/cds_cpc/: ac_fixed.h
data/fichiers_catapult_c10_4b/pkgs/cds_ppro/: ac_fixed.h
python/: Adaptator.py  Convolution.py  ConvolutionNew.py  ImageRead.py  MaxPool.py  Parser.py  Perceptron.py  Reshape.py  main.py  mainTR.py  script.py  testsNew.sh
